[tool.poetry]
name = "get_transcript"
version = "0.1.0"
description = ""
authors = ["aximov <d@alumni.tus.ac.jp>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.23.0"
python-dotenv = "^0.13.0"
google_auth_oauthlib = "^0.4.1"
google-api-python-client = "^1.8.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.5.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
